# vector_1_p

./: .gitignore  README.md  pyproject.toml  requirements.txt  verify_build.py
.github/workflows/: ci.yml
backend/: .gitignore  main.py  requirements.txt
backend/data/: failure_synthetic_data.csv  scaleup_synthetic_data.csv
backend/engines/: acquisition.py  bo_loop.py  data_ingestion.py  design_space.py  dissolution_weibull.py  domain_builder.py  equipment_db.py  failure_classifier.py  gp_model.py  hybrid_twin.py  monte_carlo.py  residual_corrector.py  risk_map.py  scaleup_physics.py  scaling_laws.py  shap_explainer.py
backend/models/: v2_residual_corrector.pkl  v3_failure_classifier.pkl
backend/routers/: v1_bayesian_doe.py  v2_scaleup.py  v3_risk.py
backend/schemas/: shared_db_schemas.py
backend/scripts/: run_active_learning_pipeline.py  synthetic_data_generator.py  train_models.py
backend/tests/: test_scaleup_physics.py  test_v1_bo.py  test_v1_bo_botorch.py  test_v1_phase1_detailed.py  test_v1_phase1_integration.py  test_v1_router.py  test_v2_scaleup.py  test_weibull_fitting.py
data/: phase1_output.json  team alpha finalised dummy dataset.json  team beta finalised dummy dataset.json  team_alpha_dummy.csv  team_beta_dummy.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/Vector1/: ActiveLearningDashboard.jsx
frontend/src/components/Vector2/: ScaleUpDashboard.jsx
phase1/: Phase_1_4.ipynb  Phase_1_production.ipynb  phase1_output.json  phase1_results.json
(+1 files in other folders)
