[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vector_1_p"
version = "0.1.0"
description = "EnFormis Vector 1 - Active Learning Engine"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[tool.setuptools]
packages = []
